version 0.6.2 (04/09/2006):

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Autogenerated.

version 0.6.1 (03/06/2006):
version 0.6.0 (01/30/2006):

1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

09/30/2005 Bob Rossi <bob@brasko.net>

	* include/tgdb_list.h (tgdb_list_destroy): Add function.
	* src/tgdb_list.c (tgdb_list_destroy): Ditto.

version 0.5.3 (08/08/2005):

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

version 0.5.2 (05/21/2005):

05/21/2004 Bob Rossi <bob@brasko.net>

	* src/Makefile.am (AM_CFLAGS): Changed relative paths to top_srcdir.
	(noinst_bin_PROGRAMS): Removed.
	(noinst_bindir): Removed.
	(noinst_PROGRAMS): Added.
	(std_hash_driver_DEPENDENCIES): Changed relative path to top_builddir.
	(std_list_driver_DEPENDENCIES): Ditto.
	(std_btree_driver_DEPENDENCIES): Ditto.
	(std_bbtree_driver_DEPENDENCIES): Ditto.
	* src/Makefile.in: Autogenerated.

version 0.5.1 (04/02/2005):
version 0.5.0 (07/14/2004):

07/14/2004 Bob Rossi <bob@brasko.net>

    * src/Makefile.am (noinst_bindir): changed top_srcdir to top_builddir

version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

04/06/2004 Bob Rossi <bob@brasko.net>

    * std_list.c (std_list_remove): Fixed bug in remove function.

03/25/2004 Bob Rossi <bob@brasko.net>

    * std_types.h (STDDestroyNotify): Changed return value from void to int.
	* std_hash.c: udpate function for change above
	* std_list_driver.c: Ditto

03/22/2004 Bob Rossi <bob@brasko.net>

    * std_list.h: Fully doxygenized.
	* std_list.c: Ditto
03/22/2004 Bob Rossi <bob@brasko.net>
