@@ -6,7 +6,17 @@
  */ 
 
 /* Standard Includes */
+#if HAVE_CONFIG_H
+#include "config.h"
+#endif /* HAVE_CONFIG_H */
+
+#if HAVE_STDIO_H
 #include <stdio.h>
+#endif /* HAVE_STDIO_H */
+
+#if HAVE_STRING_H
+#include <string.h>
+#endif /* HAVE_STRING_H */
 
 /* Local Includes */
 #include "ibuf.h"
